Update style.css try to fix btn color on ios bug

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ a { color: inherit; text-decoration: none; }
 a:focus, a:hover { text-decoration: none; }
 .container{ max-width: 85%; margin: 0 auto; padding: 0rem 1rem;}
 @media screen and (max-width: 1200px) { .container{ max-width: 95%; margin: 0 auto; padding: 0rem 1rem;} }
+button{color: #000000;}
 .btn{ font-weight: 800; font-style: italic; cursor: pointer; font-size: 1.125rem; font-family: 'Open Sans', sans-serif; border-radius: 100rem; border: none; margin: 0; padding: 9px 25px 9px 25px; width: auto; -webkit-font-smoothing: inherit; -moz-osx-font-smoothing: inherit; -webkit-appearance: none; appearance: none; -webkit-tap-highlight-color: transparent; }
 .btn--white{ background-color: white; color: #000000;}
 .btn--black{background-color: #000000; color: #ffff;}
